Atualizei o produto fone de ouvido.

--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
 <nav>
     <button class="nav-toggle">☰</button>
     <ul>
-        <li><a href="#sobre">Sobre Mim</a></li>
+        <li><a href="sobre.html">Sobre Mim</a></li>
         <li><a href="#loja">Loja</a></li>
         <li><a href="#receitas">Receitas</a></li>
         <li><a href="#portfolio">Portfólio</a></li>
@@ -47,7 +47,7 @@
         <div class="loja-item portfolio-item" data-category="loja">
             <img src="imagens/produto1.jfif " alt="Produto 1">
             <h3>Produto 1</h3>
-            <p>Descrição curta do produto 1, destacando características importantes e benefícios.</p>
+            <p>fones de ouvido bluetooth (diversar cores).</p>
             <p class="preco">R$ 49,90</p>
             <button class="btn-loja">Comprar</button>
         </div>
