Adicionei mais 3 produtos a loja.

--- a/index.html
+++ b/index.html
@@ -54,11 +54,27 @@
 
         <div class="loja-item portfolio-item" data-category="loja">
             <img src="imagens/produto2.jfif" alt="Produto 2">
-            <h3>Produto 2</h3>
-            <p>Descrição curta do produto 2, informando detalhes que ajudam o cliente a decidir.</p>
+            <h3>camera de segurança</h3>
+            <p>camera de segurança com visão noturna, bluetooth e wifi gravação em nuvem, acompanhe tudo pelo celular.</p>
             <p class="preco">R$ 79,90</p>
             <button class="btn-loja">Comprar</button>
         </div>
+
+        <div class="loja-item portfolio-item" data-category="loja">
+            <img src="imagens/celular1.jpg" alt="Produto 3">
+            <h3>sansun s22</h3>
+            <p>smartphone com tela de 6.5", 128GB de armazenamento e câmera tripla.</p>
+            <p class="preco">R$ 999,90</p>
+            <button class="btn-loja">Comprar</button>
+        </div>
+
+        <div class="loja-item portfolio-item" data-category="loja">
+            <img src="imagens/celular2.jfif" alt="Produto 4">
+            <h3>iphone 16 pro</h3>
+            <p>smartphone com tela de 6.1", 128GB de armazenamento e câmera dupla.</p>
+            <p class="preco">R$ 6.499,90</p>
+            <button class="btn-loja">Comprar</button>
+
 
         <!-- Adicione mais produtos seguindo o mesmo modelo -->
     </div>
