ajustes de css para centralizar e diminuir imagens

--- a/index.html
+++ b/index.html
@@ -62,7 +62,7 @@
 
         <div class="loja-item portfolio-item" data-category="loja">
             <img src="imagens/celular1.jpg" alt="Produto 3">
-            <h3>sansun s22</h3>
+            <h3>Samsung S22</h3>
             <p>smartphone com tela de 6.5", 128GB de armazenamento e câmera tripla.</p>
             <p class="preco">R$ 999,90</p>
             <button class="btn-loja">Comprar</button>
@@ -70,7 +70,7 @@
 
         <div class="loja-item portfolio-item" data-category="loja">
             <img src="imagens/celular2.jfif" alt="Produto 4">
-            <h3>iphone 16 pro</h3>
+            <h3>iPhone 16 Pro</h3>
             <p>smartphone com tela de 6.1", 128GB de armazenamento e câmera dupla.</p>
             <p class="preco">R$ 6.499,90</p>
             <button class="btn-loja">Comprar</button>
